tests/snapshots/examples_fixtures/type_system__failing__19_effect_polymorphism_missing_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/19_effect_polymorphism_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `apply_twice` requires effects `Console, FileSystem, Stdin` in this function signature.

  examples/type_system/failing/19_effect_polymorphism_missing_effect.flx:33:5
   |
33 |     apply_twice(log_inc, 3)
   |     ^^^^^^^^^^^
   |     ----------- effectful call occurs here

Hint:
  Add `with Console, FileSystem, Stdin` to the enclosing function.
== stdout ==
<not executed>
